--- a/.env
+++ b/.env
@@ -1,3 +1,12 @@
 #VITE_API_URL = https://leaderflix-banck.onrender.com
 
 VITE_API_URL = http://localhost:8080
+
+#Firebase configuration
+VITE_FIREBASE_API_KEY = AIzaSyD5yoPcbyNSrSrjw2v2X3kad6FqDe-uya4
+VITE_FIREBASE_AUTH_DOMAIN = viewcall.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID = viewcall
+VITE_FIREBASE_STORAGE_BUCKET = viewcall.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID= 626010306702
+VITE_FIREBASE_APP_ID= 1:626010306702:web:69392d8c2926cb1bdaf1df
+VITE_FIREBASE_MEASUREMENT_ID= G-Q9GTR2HQHJ
