--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-#VITE_API_URL = https://leaderflix-banck.onrender.com
+VITE_API_URL = https://viewcall-back.onrender.com
 
-VITE_API_URL = http://localhost:8080
+#VITE_API_URL = http://localhost:8080
 
 #Firebase configuration
 VITE_FIREBASE_API_KEY = AIzaSyD5yoPcbyNSrSrjw2v2X3kad6FqDe-uya4
