--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ VITE_FIREBASE_STORAGE_BUCKET = viewcall.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID= 626010306702
 VITE_FIREBASE_APP_ID= 1:626010306702:web:69392d8c2926cb1bdaf1df
 VITE_FIREBASE_MEASUREMENT_ID= G-Q9GTR2HQHJ
+VITE_SOCKET_URL=http://localhost:8080   # Para chat en tiempo real
