--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.30.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.14",
     "zustand": "^5.0.8"
   },
