--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ VITE_API_URL = https://viewcall-back.onrender.com
 
 #VITE_API_URL = http://localhost:8080
 
+VITE_CHAT_SOCKET_URL = http://localhost:3000
+
 #Firebase configuration
 VITE_FIREBASE_API_KEY = AIzaSyD5yoPcbyNSrSrjw2v2X3kad6FqDe-uya4
 VITE_FIREBASE_AUTH_DOMAIN = viewcall.firebaseapp.com
@@ -10,6 +12,6 @@ VITE_FIREBASE_STORAGE_BUCKET = viewcall.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID= 626010306702
 VITE_FIREBASE_APP_ID= 1:626010306702:web:69392d8c2926cb1bdaf1df
 VITE_FIREBASE_MEASUREMENT_ID= G-Q9GTR2HQHJ
-VITE_SOCKET_URL=http://localhost:4002
-VITE_CHAT_URL=http://localhost:4002
+VITE_SOCKET_URL=http://localhost:3000
+VITE_CHAT_URL=http://localhost:3000
 
