--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ VITE_API_URL = https://viewcall-back.onrender.com
 
 #VITE_API_URL = http://localhost:8080
 
-VITE_CHAT_SOCKET_URL = http://localhost:3000
+VITE_CHAT_SOCKET_URL = https://viewcall-back-chat-xy4n.onrender.com
 
 #Firebase configuration
 VITE_FIREBASE_API_KEY = AIzaSyD5yoPcbyNSrSrjw2v2X3kad6FqDe-uya4
