--- a/.env
+++ b/.env
@@ -1,9 +1,15 @@
-VITE_API_URL = https://viewcall-back.onrender.com
+#VITE_API_URL = https://viewcall-back.onrender.com
 
-#VITE_API_URL = http://localhost:8080
+VITE_API_URL = http://localhost:8080
 
 VITE_CHAT_SOCKET_URL = https://viewcall-back-chat-xy4n.onrender.com
 #VITE_CHAT_SOCKET_URL = http://localhost:3000
+
+#VITE_VOICE_SOCKET_URL = http://localhost:4000
+VITE_VOICE_SOCKET_URL =https://view-back-voz.onrender.com
+VITE_VOICE_PEER_HOST = localhost
+VITE_VOICE_PEER_PORT = 4000
+VITE_VOICE_PEER_PATH = /peerjs
 
 #Firebase configuration
 VITE_FIREBASE_API_KEY = AIzaSyD5yoPcbyNSrSrjw2v2X3kad6FqDe-uya4
