--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "@types/peerjs": "^0.0.30",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "firebase": "^12.6.0",
     "lucide-react": "^0.546.0",
+    "peerjs": "^1.5.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
