--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-#VITE_API_URL = https://viewcall-back.onrender.com
+VITE_API_URL = https://viewcall-back.onrender.com
 
-VITE_API_URL = http://localhost:8080
+#VITE_API_URL = http://localhost:8080
 
 VITE_CHAT_SOCKET_URL = https://viewcall-back-chat-xy4n.onrender.com
 #VITE_CHAT_SOCKET_URL = http://localhost:3000
