--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ VITE_CHAT_SOCKET_URL = https://viewcall-back-chat-xy4n.onrender.com
 #VITE_CHAT_SOCKET_URL = http://localhost:3000
 
 #VITE_VOICE_SOCKET_URL = http://localhost:4000
-VITE_VOICE_SOCKET_URL =https://view-back-voz.onrender.com
-VITE_VOICE_PEER_HOST = localhost
-VITE_VOICE_PEER_PORT = 4000
+VITE_VOICE_SOCKET_URL = https://view-back-voz-yeqs.onrender.com
+VITE_VOICE_PEER_HOST = view-back-voz-yeqs.onrender.com
+VITE_VOICE_PEER_PORT = 443
 VITE_VOICE_PEER_PATH = /peerjs
 
 #Firebase configuration
