--- a/.env
+++ b/.env
@@ -5,11 +5,11 @@ VITE_API_URL = https://viewcall-back.onrender.com
 VITE_CHAT_SOCKET_URL = https://viewcall-back-chat-xy4n.onrender.com
 #VITE_CHAT_SOCKET_URL = http://localhost:3000
 
-#VITE_VOICE_SOCKET_URL = http://localhost:4000
-VITE_VOICE_SOCKET_URL = https://view-back-voz-yeqs.onrender.com
-VITE_VOICE_PEER_HOST = view-back-voz-yeqs.onrender.com
-VITE_VOICE_PEER_PORT = 443
-VITE_VOICE_PEER_PATH = /peerjs
+VITE_SOCKET_URL = http://localhost:3000
+VITE_WEBRTC_URL = http://localhost:9000
+VITE_ICE_SERVER_URL = relay1.expressturn.com:3480
+VITE_ICE_SERVER_USERNAME = 000000002080601346
+VITE_ICE_SERVER_CREDENTIAL = tsErpzExQb+TOcyugPS4x7Xuu+k=
 
 #Firebase configuration
 VITE_FIREBASE_API_KEY = AIzaSyD5yoPcbyNSrSrjw2v2X3kad6FqDe-uya4
