--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.30.1",
+    "simple-peer": "^9.11.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.14",
+    "util": "^0.12.5",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -31,6 +34,7 @@
     "@types/node": "^24.6.0",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
+    "@types/simple-peer": "^9.11.9",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
