--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ VITE_CHAT_SOCKET_URL = https://viewcall-back-chat-xy4n.onrender.com
 #VITE_CHAT_SOCKET_URL = http://localhost:3000
 
 VITE_SOCKET_URL = http://localhost:3000
-VITE_WEBRTC_URL = http://localhost:9001
-#VITE_WEBRTC_URL = https://viewcall-back-webrtc.onrender.com
+#VITE_WEBRTC_URL = http://localhost:9001
+VITE_WEBRTC_URL = https://viewcall-back-webrtc.onrender.com
 VITE_ICE_SERVER_URL = relay1.expressturn.com:3480
 VITE_ICE_SERVER_USERNAME = 000000002080601346
 VITE_ICE_SERVER_CREDENTIAL = tsErpzExQb+TOcyugPS4x7Xuu+k=
